crates/webfang_core/tests/snapshots/gate3_config_equivalence_test__family__crawler_network_timeout_secs.snap
---
source: crates/webfang_core/tests/gate3_config_equivalence_test.rs
expression: redacted
---
{
  "concurrency": "ConcurrencyConfig { value: None, auto_detect: true }",
  "delay_ms": "1000",
  "export_format": "Jsonl",
  "format": "Markdown",
  "ignore_waf": "false",
  "max_depth": "2",
  "max_pages": "10",
  "obsidian_relative_assets": "false",
  "obsidian_rich_metadata": "false",
  "obsidian_tags": "",
  "obsidian_wiki_links": "false",
  "output": "output",
  "quick_save": "false",
  "selector": "body",
  "sitemap_url": "None",
  "timeout_secs": "45",
  "use_sitemap": "false",
  "vault": "None"
}
